# Librairy

./: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
include/: library.h
src/: len.c  realloc.c  strcat.c  strcmp.c  strdup.c
tests/: test.c
